#242 More AWS ECS sample documentation. Some little cleanup.